--- a/server/pom.xml
+++ b/server/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
@@ -112,7 +117,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.3.0.M0</version>
+                <version>9.2.3.v20140905</version>
             </plugin>
         </plugins>
     </build>
